## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# OPTIMIZER
######################################################################

check_PROGRAMS += \
        binding_test

binding_test_SOURCES = \
		optimizer/binding_test.cpp \
		harness.cpp
