## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# OPTIMIZER
######################################################################

optimizer_FILES = \
				backend/optimizer/postgres_shim.cpp \
				backend/optimizer/query_transformer.cpp \
				backend/optimizer/optimizer.cpp \
				backend/optimizer/operator_node.cpp \
				backend/optimizer/query_operators.cpp \
				backend/optimizer/query_node_printer.cpp \
				backend/optimizer/logical_operators.cpp \
				backend/optimizer/operator_visitor.cpp \
				backend/optimizer/group.cpp \
				backend/optimizer/pattern.cpp \
				backend/optimizer/binding.cpp

optimizer_INCLUDES = \
				   -I$(srcdir)/backend/optimizer
